2004-09-17  Derek Price  <derek@ximbiot.com>

	* config.h.in: Remove TRUST_OS_FILE_CACHE.

2004-09-17  Derek Price  <derek@ximbiot.com>

	* stripslash.c: Remove file.

2004-09-14  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (cvs_casecmp): Moved to src/subr.c

2004-09-09  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (check_statbuf): Remove unused variables.

2004-09-08  Derek Price  <derek@ximbiot.com>

	* JmgStat.c, JmgStat.h: Convert to use UNIX line endings on UNIX.
	(Thanks to report from Conrad T. Pino <conrad@pino.com>.)

2004-09-07  Derek Price  <derek@ximbiot.com>

	* JmgStat.c, JmgStat.h: New files.
	* filesubr.c (check_statbuf): Use new Windows mod time routine.
	(Thanks to a report from Chris Bohn <cbohn@rrinc.com>, help from J. C.
	Hamlin <jchamlin@ibsys.com>, and a published patch from Jonathan
	Gilligan.)

2004-09-02  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (PROXY_SUPPORT, TRUST_OS_FILE_CACHE): New defines.

2004-06-24  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (restrict): Define empty for Windows.
	(Patch submitted by Conrad T. Pino <Conrad@Pino.com>.)

2004-06-24  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (HAVE_RUN_TZSET_TEST, my_strftime): Define to values
	more appropriate for Windows.
	(Original patch submitted by Conrad T. Pino <Conrad@Pino.com>.)

2004-06-22  Derek Price  <derek@ximbiot.com>

	* config.h.in: Add "inline" & "SIZE_MAX" macros for "xsize.h" header.
	* config.h: Regenerated for "config.h.in" change.
	(Original patch from Conrad T. Pino <Conrad@Pino.com>.)

2004-06-09  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Remove some files that are included by
	virtue of appearing in configure.in rules.

2004-05-20  Derek Price  <derek@ximbiot.com>

	* config.h.in.footer (ssize_t): Move...
	* config.h.in (size_t): ...here.
	(MBLEN, MBRLEN, HAVE_RUN_TZSET_TEST, HAVE_STRFTIME,
	TZSET_CLOBBERS_LOCALTIME_BUFFER, my_strftime, tzset): New macros.
	* config.h.in, stamp-chi: Regenerated.
